# state-graph

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  REFERENCE.md  docker-compose.yaml  go.mod  go.sum
.claude/: settings.local.json
cmd/kflow/: client.go  execution.go  logs.go  main.go  service.go  ui.go  workflow.go
cmd/orchestrator/: main.go
deployments/k8s/: Chart.yaml  values.yaml
docs/phases/: phase-1-sdk-types.md  phase-10-helm-chart.md  phase-11-auth.md  phase-12-graph-protocol.md  phase-13-grpc-proto.md  phase-2-state-machine.md  phase-3-mongodb.md  phase-4-kubernetes.md  phase-5-api-services.md  phase-6-telemetry.md  phase-7-python-sdk.md  phase-8-rust-sdk.md  phase-9-dashboard.md
examples/: demo-wf.json
examples/05-control-plane/: main.go
examples/06-kubernetes/: Dockerfile  main.go
internal/api/: auth_handler.go  auth_middleware.go  logs_ws_handler.go  server.go  server_test.go  service_handler.go  telemetry_handler.go  workflow_handler.go  workflow_handler_test.go  ws_handler.go  ws_handler_test.go
internal/config/: config.go
internal/engine/: engine_test.go  (+4 more)
scripts/: demo.sh
sdk/python/: pyproject.toml
sdk/python/kflow/: __init__.py  runner.py  service.py  workflow.py
sdk/python/kflow/proto/: __init__.py  runner_pb2.py  runner_pb2_grpc.py  types_pb2.py  types_pb2_grpc.py
sdk/python/tests/: test_workflow.py
sdk/rust/: Cargo.toml  build.rs
sdk/rust/src/: lib.rs  proto.rs  runner.rs  service.rs  workflow.rs
ui/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+68 files in other folders)
