[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kflow"
version = "0.1.0"
description = "Python SDK for the kflow workflow engine"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "protobuf>=5.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kflow*"]
