[package]
name    = "kflow"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",    features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum        = "0.7"
thiserror   = "1"

# gRPC (Phase 13) — uncomment when proto stubs are generated
# tonic       = "0.12"
# prost       = "0.13"
# prost-types = "0.13"

[dev-dependencies]
tokio-test = "0.4"
